# blockies-haic

./: .gitignore  LICENSE  README.md  mypy.sh  pyproject.toml  run_flake8.sh  run_test.sh  setup.cfg
blockies/: __init__.py  blender.py  blocky_bias.py  cli_tool.py  download_blender.sh  plotvis.py  pytorch.py  scene_parameters.py  utils.py
blockies/_blender/: __init__.py  blender_object.py  butils.py  render_samples.py  scene.py
config/: debugging.toml  default_blockies.toml  example.toml
test/: test_bias.py  test_blender.py  test_cli_tool.py  test_pytorch.py  test_scene_parameters.py
test/data/: test_datasets.toml
